<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MyStudy</string>
    <string name="gestures">Gestures</string>
    <string name="lessons">Lessons</string>
    <string name="main_text">KOTLIN(занятия 33-40)</string>
    <string name="text1"> Hello</string>
    <string name="text2"></string>
    <string name="activ_a">Activity A</string>
    <string name="btn_a">Start B</string>
    <string name="activ_b">Activity B</string>
    <string name="btn_b">Start C</string>
    <string name="activ_c">Activity C</string>
    <string name="btn_c">Start D</string>
    <string name="activ_d">Activity D</string>
    <string name="btn_d">Start A</string>

    <string name="lesson_text">Занятие</string>
    <string name="btn_34">Занятие №34 Activity Stack</string>
    <string name="btn_start_d">Start D</string>
    <string name="btn_start_c">Start C</string>
    <string name="text_launch_top">Если в файле Anfroid Manifest указать launchMode=singleTop для activity D,
        то он будет открывать этот активити только один раз, то есть если пользователь будет нажимать несколько раз
        по кнопке "Start D" он откроет его один раз и не будет создавать несколько Instance(копий),
        как если бы я вообще не указывала launchMode, при условии что активити D находится
        в самом верху стека.
    Если указать в активити A launchMode=singleTask, тогда при нажатии из активити D на Start A,
        он удалит все стеки B, C, D, так как у нас уже есть стек А, он его не будет переносит поверх всех стеков. </string>
    <string name="btn_36">Занятие №36 Fragments</string>
    <string name="poster">Задание№32 Poster</string>
    <string name="movie_title">Миллиарды(Billions)</string>
    <string name="director_label">Режиссер</string>
    <string name="director">Джеймс Фоули</string>
    <string name="movie_short_description">Современный мир - это непредсказуемая субстанция. Никто не знает, кто чем управляет и кто что решает. В центре внимания сюжета сериала \"Миллиарды\" оказывается противостояние двух выдающихся личностей.</string>
    <string name="actor_1">Дэмиэн Льюис</string>
    <string name="actor_2">Пол Джаматти</string>
    <string name="actor_3">Мэгги Сифф</string>
    <string name="actor_4">Дэвид Костабайл</string>
    <string name="actors_labels">Актеры</string>
    <string name="like">Like</string>
    <string name="watch">Watch</string>
    <string name="share">Share</string>
    <string name="first_fragment">Frag #1</string>
    <string name="second_fragment">Frag #2</string>
    <string name="third_fragment">Frag #3</string>


    <string name="frag_1_text"> Fragment# 1</string>
    <string name="frag_2_text">Fragment #2</string>
    <string name="frag_3_text">Fragment #3</string>
    <string name="fragments">Fragments</string>
    <string name="btn_37">Занятие 37 Передача аргументов во фрагмент</string>
    <string name="btn_arguments">Передать</string>
    <string name="btn_hw37">Домашнее задание №37</string>
    <string name="ed_text_37">Введите текст</string>
    <string name="btn_done_37">OK</string>
    <string name="btn_hw_37_2">HW 37</string>
    <string name="btn_38">Урок 38 Коммуникация между двумя фрагментами</string>
    <string name="title_38__1">FRAGMENT A</string>
    <string name="title_38_2">FRAGMENT B</string>
    <string name="btn_38_2">FRAGMENT B</string>
    <string name="inputText_38_2" />
    <string name="text_from_a" />
    <string name="title_38_1">FRAGMENT A</string>
    <string name="input_text_38_1" />
    <string name="btn_38_1">Fragment A</string>
    <string name="text_from_b" />
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="btn_38_hw">Drawing Navigation</string>
    <string name="nav_title">Navigation Drawer</string>
    <string name="nav_text">"Добавьте NavigationDrawer(выдвигающееся меню сбоку, шторка) в приложение. По нажатию на каждый итем(элемент меню) показывать Toast с текстом итема.  "</string>
    <string name="btn_39_hw">Scrolling Bar</string>
    <string name="scroll_text">Homework #39 Scrolling Bar</string>
    <string name="item_first">First item</string>
    <string name="item_second">Second item</string>
    <string name="item_third">Third item</string>
    <string name="item_fourth">Fourth item</string>
    <string name="item_fifth">Fifth item</string>
    <string name="item_sixth">Sixth item</string>
    <string name="item_seventh">Seventh item</string>
    <string name="item_eighth">Eighth item</string>
    <string name="item_ninth">Ninth item</string>
    <string name="item_tenth">Tenth item</string>
    <string name="btn_40_hw">Menu with fragments.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_1">Fragment 1</string>
    <string name="fragment_2">Fragment 2</string>
    <string name="fragment_3">Fragment 3</string>
    <string name="fragment_40">Fragments</string>
    <string name="fragment1">Fragment 1</string>
    <string name="fragment2">Fragment 2</string>
    <string name="fragment3">Fragment 3</string>
</resources>