<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityScrolling">

    <TextView
        android:id="@+id/text_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scroll_text"
        android:textColor="@color/green"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127" />

    <HorizontalScrollView
        android:id="@+id/scrolling_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_scroll"
        android:layout_width="0dp"
        android:layout_marginTop="200dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="?android:attr/buttonBarButtonStyle">

            <Button
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/item_first" />

            <Button
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/item_second" />

            <Button
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/item_third" />

            <Button
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/item_fourth" />

            <Button
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/item_fifth" />

            <Button
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/item_sixth" />

            <Button
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/item_seventh" />

            <Button
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:text="@string/item_eighth" />

            <Button
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/item_ninth" />

            <Button
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/item_tenth" />

        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>