<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PosterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp"
            />

        <ImageView
            android:id="@+id/banner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/billions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/movie_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@id/poster"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/banner"
            app:layout_goneMarginEnd="16dp"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/poster"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:adjustViewBounds="true"
            android:src="@drawable/billions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/banner" />

        <TextView
            android:id="@+id/director_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/director_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/director"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constrainedWidth="true"
            app:layout_constraintBaseline_toBaselineOf="@id/director_label"
            app:layout_constraintEnd_toStartOf="@id/poster"
            app:layout_constraintStart_toEndOf="@id/director_label"
            android:textColor="@color/white"/>
        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/title_section_bottom_barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="title,poster, director, director_label"
            />
        <TextView
            android:id="@+id/short_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/movie_short_description"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_section_bottom_barrier"/>

        <TextView
            android:id="@+id/actors_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/actors_labels"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/short_description"
            android:textColor="@color/white"/>


        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/actors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:constraint_referenced_ids="actor_1, actor_2, actor_3, actor_4"
            app:flow_horizontalBias="0"
            app:flow_wrapMode="chain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/actors_label"
            app:flow_horizontalStyle="packed"
            app:flow_horizontalGap="8dp"
            app:flow_lastVerticalStyle="packed"
            app:flow_verticalGap="8dp"/>


        <TextView
            android:id="@+id/actor_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actor_1"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/actor_2"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actor_2"/>
        <TextView
            android:id="@+id/actor_3"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actor_3"/>
        <TextView
            android:id="@+id/actor_4"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actor_4"/>

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/actions"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            app:constraint_referenced_ids="like,watch,share"
            app:flow_horizontalBias="0"
            app:flow_horizontalGap="8dp"
            app:flow_horizontalStyle="packed"
            app:flow_verticalStyle="packed"
            app:flow_wrapMode="chain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/actors"
            app:layout_constraintWidth_default="wrap"
            />
        <Button
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/like"
            app:layout_goneMarginEnd="0dp"/>
        <Button
            android:id="@+id/watch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/watch"
            app:layout_goneMarginEnd="0dp"
            app:layout_goneMarginStart="0dp"
            />
        <Button
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:text="@string/share"
            app:layout_goneMarginStart="0dp"
            app:layout_goneMarginEnd="0dp"
            />
            



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>