<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_38_1"
    android:background="@color/green">

    <TextView
        android:id="@+id/title_38_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_38_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <EditText
        android:id="@+id/inputText_38_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_text_38_1"
        app:layout_constraintBottom_toTopOf="@+id/textFromB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_38_1"
        app:layout_constraintVertical_bias="0.175" />

    <Button
        android:id="@+id/btn_38_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_38_1"
        app:layout_constraintBottom_toTopOf="@+id/textFromB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toEndOf="@+id/inputText_38_1"
        app:layout_constraintTop_toBottomOf="@+id/title_38_1"
        app:layout_constraintVertical_bias="0.166" />

    <TextView
        android:id="@+id/textFromB"
        android:layout_width="7dp"
        android:layout_height="0dp"
        android:text="@string/text_from_b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_38_1" />
</androidx.constraintlayout.widget.ConstraintLayout>