<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_38_2"
    android:background="@color/yellow">

    <TextView
        android:id="@+id/title_38_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_38_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />

    <Button
        android:id="@+id/btn_38_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/btn_38_2"
        app:layout_constraintBottom_toTopOf="@+id/textFromA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toEndOf="@+id/inputText_38_2"
        app:layout_constraintTop_toBottomOf="@+id/title_38_2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/inputText_38_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/inputText_38_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_38_2" />

    <TextView
        android:id="@+id/textFromA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_from_a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputText_38_2"
        app:layout_constraintVertical_bias="0.122" />
</androidx.constraintlayout.widget.ConstraintLayout>